[gd_scene load_steps=4 format=3 uid="uid://dydlgpkx5qd5o"]

[ext_resource type="Script" path="res://Enviroment/Letreros/letrero.gd" id="1_au5ab"]
[ext_resource type="Texture2D" uid="uid://ccrlpljsdhna4" path="res://icon.svg" id="2_xkag5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_deh50"]
size = Vector2(128, 127)

[node name="Letrero" type="Node2D"]
script = ExtResource("1_au5ab")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("2_xkag5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_deh50")

[node name="InitialPointCartel" type="Node2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
